feat(rag): implement semantic search with Nvidia NemoRetriever embedding
- Add GitHub issue sync with AI analysis (OpenAI/DeepSeek)
- Implement vector search using Convex native vectorSearch API
- Configure Nvidia llama-3.2-nemoretriever-300m-embed-v2 (2048 dims)
- Add search UI with IssueCard, SearchBar, and detail modal
- Set similarity threshold to 0.25 for NemoRetriever score range
- Add cron job for daily issue sync

--- a/.env.local.example
+++ b/.env.local.example
@@ -32,8 +32,11 @@ PUBLIC_CONVEX_URL=https://your-project.convex.cloud
 
 LLM_API_KEY=
 LLM_API_URL=
-LLM_MODEL_TEXT=
-LLM_MODEL_VISION=
+LLM_MODEL=
+
+EMBEDDING_API_KEY=
+EMBEDDING_API_URL=
+EMBEDDING_MODEL=
 
 # ------------------------------------------------------------------------------
 # GitHub API Token (for rate limit)
